--- a/src/component/LandingPageV2/ProductDevLifecycle/Prototype/style.css
+++ b/src/component/LandingPageV2/ProductDevLifecycle/Prototype/style.css
@@ -18,6 +18,7 @@ a {
   .alignItemsRight {
     display: flex;
     flex-direction: row;
+    padding: 5vw;
   }
 
   .DevelopmentWheelTwo {
